# retrieve-then-extract-RAG

./: .agent  .env.example  .gitignore  API_EXAMPLES.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  QUICK_OPTIMIZATION_GUIDE.md  README.md  STRATEGY_COMPARISON.md  compare_strategies.py  demo.py  docker-compose.yml  example_usage.py  main.py  pyproject.toml  quickstart.sh  requirements.txt  setup.py  test_components.py  test_retrieval_strategies.py
src/: __init__.py  chunker.py  collection_manager.py  config.py  document_fetcher.py  embedder.py  evaluator.py  ground_truth.py  logger.py  retrieval_strategies.py  text_extractor.py  weaviate_client.py
src/utils/: logger.py
tests/: test_retrieval_strategies.py
