[project]
name = "weaviate-embedding-pipeline"
version = "0.1.0"
description = "A RAG pipeline using Weaviate vector database and Ollama embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "weaviate-client==4.9.3",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-ollama==0.2.0",
    "requests==2.32.3",
    "beautifulsoup4==4.12.3",
    "markdown==3.7",
    "wikipedia==1.4.0",
    "pydantic==2.10.5",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
